<resources>
    <string name="app_name">My Application</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="main_activity_label">Main Activity</string>
    <string name="search_activity_label">Search Activity</string>
    <string name="login_activity_label">Login Activity</string>
    <string name="signup_activity_label">SignUp Activity</string>
    <string name="email_verification_activity_label">EmailVerification Activity</string>
    <string name="account_activity_label">Account Activity</string>
    <string name="verification_activity_label">Verification Activity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="action_search">Search</string>

    <string name="category_prompt">Select Category</string>
    <string-array name="category_options">
        <item>Select Category</item>
        <item>laptop</item>
        <item>home appliances</item>
        <item>smartphones</item>
        <item>TV screens and Projectors</item>
        <item>camera</item>
        <item>tablet</item>
        <item>console</item>
        <item>PC</item>
        <item>car accessory</item>
        <item>gaming accessory</item>
        <item>furniture</item>
    </string-array>




</resources>